[gd_scene load_steps=20 format=3 uid="uid://cfaip0jysvvy2"]

[ext_resource type="FontFile" uid="uid://tprirob8rlhy" path="res://resources/fonts/RobotoMono-Bold.ttf" id="1_f8ii7"]
[ext_resource type="Script" path="res://script/menu_ui.gd" id="1_slhug"]
[ext_resource type="FontFile" uid="uid://c0vx5q7rcvmvu" path="res://resources/fonts/RobotoMono-Regular.ttf" id="2_o714a"]
[ext_resource type="Script" path="res://script/play_menu.gd" id="4_eawr5"]
[ext_resource type="PackedScene" uid="uid://cmu2bxwwjuayp" path="res://scene/chared_wrapper.tscn" id="4_x88wc"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="6_ajagk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnc6i"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.0823529, 0.580392, 0.184314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avpyf"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.0666667, 0.501961, 0.156863, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yvb6"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.858824, 0.0666667, 0.0509804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6188r"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.705882, 0.0431373, 0.0313726, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmsny"]
bg_color = Color(0.278431, 0.513726, 0.184314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nviyp"]
bg_color = Color(0.219608, 0.411765, 0.141176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fo66n"]
bg_color = Color(0.278431, 0.513726, 0.184314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3kgn"]
bg_color = Color(0.278431, 0.513726, 0.184314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hcp8"]
bg_color = Color(0.219608, 0.411765, 0.141176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_gqo1c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yyro0"]
resource_name = "play_ui"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1185, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gxify"]
resource_name = "when-ready"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnc1f"]
_data = {
"RESET": SubResource("Animation_gqo1c"),
"play_ui": SubResource("Animation_yyro0"),
"when-ready": SubResource("Animation_gxify")
}

[node name="Node" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slhug")

[node name="MCont" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Title" type="Label" parent="CanvasLayer/Control/MCont"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_f8ii7")
theme_override_font_sizes/font_size = 48
text = "Manusia Lidi"
vertical_alignment = 1

[node name="Hbox" type="HBoxContainer" parent="CanvasLayer/Control/MCont"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="play" type="Button" parent="CanvasLayer/Control/MCont/Hbox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_o714a")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_rnc6i")
theme_override_styles/hover = SubResource("StyleBoxFlat_rnc6i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_avpyf")
text = "Main"

[node name="quit" type="Button" parent="CanvasLayer/Control/MCont/Hbox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_o714a")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_7yvb6")
theme_override_styles/hover = SubResource("StyleBoxFlat_7yvb6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6188r")
text = "Keluar"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enabled = true

[node name="char_editor_ui" type="Control" parent="CanvasLayer2" node_paths=PackedStringArray("char1", "char2")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_eawr5")
char1 = NodePath("Hbox/Vbox")
char2 = NodePath("Hbox/Vbox3")

[node name="Hbox" type="HBoxContainer" parent="CanvasLayer2/char_editor_ui"]
custom_minimum_size = Vector2(1100, 550)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0225694
anchor_top = 0.0756173
anchor_right = 0.977431
anchor_bottom = 0.981481
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Vbox" parent="CanvasLayer2/char_editor_ui/Hbox" instance=ExtResource("4_x88wc")]
layout_mode = 2

[node name="Vbox2" type="VBoxContainer" parent="CanvasLayer2/char_editor_ui/Hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="CanvasLayer2/char_editor_ui/Hbox/Vbox2"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_mode = 0
theme_override_fonts/font = ExtResource("2_o714a")
theme_override_styles/normal = SubResource("StyleBoxFlat_qmsny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qmsny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nviyp")
text = "Mulai"

[node name="Vbox3" parent="CanvasLayer2/char_editor_ui/Hbox" instance=ExtResource("4_x88wc")]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer2/char_editor_ui"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_f8ii7")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_fo66n")
theme_override_styles/hover = SubResource("StyleBoxFlat_m3kgn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7hcp8")
text = "<"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tnc1f")
}

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer3"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Virtual Joystick" parent="CanvasLayer3/Control" instance=ExtResource("6_ajagk")]
layout_mode = 1
offset_top = -220.0
offset_right = 220.0
offset_bottom = 0.0
action_left = "a"
action_right = "d"
action_up = "w"
action_down = "s"

[node name="Virtual Joystick2" parent="CanvasLayer3/Control" instance=ExtResource("6_ajagk")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = -220.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
action_left = "j"
action_right = "l"
action_up = "i"
action_down = "k"

[connection signal="pressed" from="CanvasLayer/Control/MCont/Hbox/play" to="CanvasLayer/Control" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MCont/Hbox/quit" to="CanvasLayer/Control" method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer2/char_editor_ui/Hbox/Vbox2/Button" to="CanvasLayer2/char_editor_ui" method="_on_mulai_pressed"]
[connection signal="pressed" from="CanvasLayer2/char_editor_ui/Button" to="CanvasLayer/Control" method="_on_close_pressed"]
